# tzbot

./: Dockerfile  Procfile  README.md  chat_list.sample.json  docker-compose.yml  env_dist  langdict.py  pyproject.toml  requirements.txt  sample.config.env
tzbot/: __init__.py  __main__.py  common.py  default_config.py  langdict.py  main.py  strings.py
tzbot/modules/: __init__.py  auto_forward.py  default.py  del_msg.py  delete_join.py  delete_join_cmd.py  delete_msg.py  misc.py
tzbot/utils/: chat.py  message.py
