[tool.poetry]
name = "tzbot"
version = "3.0"
description = ""
authors = ["tzagim"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{ include = "tzbot" }]

[tool.poetry.scripts]
tzbot = "tzbot.main:run"

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^21.10"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"


[tool.black]
line-length = 100
target-version = ["py38"]

#
# Isort Config
#
[tool.isort]
profile = "black"
known_third_party = ["telegram", "dotenv"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
